@@ -8,6 +8,8 @@
   trimming values at 150 characters.
 * Finally removed the deprecated & unused chefcrypto module inside goiardi - it
   was moved to a separate module back in November of 2016.
+* Generate shovey signing keys within goiardi and provide the public key
+  directly to clients.
 * TODO: Plenty more to add when this is finally ready to release.
 
 0.11.10 (Unreleased at this time)
